test/library/standard/List/indexOf/listIndexOfHaltStart.good
listIndexOfHaltStart.chpl:10: error: halt reached - Start index for "list.find" out of bounds: -1
